--- a/NoOne/springBootBase/pom.xml
+++ b/NoOne/springBootBase/pom.xml
@@ -59,9 +59,30 @@
 			<artifactId>mybatis-generator-core</artifactId>
 			<version>1.3.5</version>
       </dependency>
+       
+      <dependency>
+	    <groupId>dom4j</groupId>
+	    <artifactId>dom4j</artifactId>
+	</dependency>
+	
+	<dependency>
+		    <groupId>com.thoughtworks.xstream</groupId>
+		    <artifactId>xstream</artifactId>
+		    <version>1.4.9</version>
+		</dependency>
+		<!--
+		<dependency>    
+		    <groupId>net.sf.json-lib</groupId>    
+		    <artifactId>json-lib</artifactId>    
+		    <version>2.4</version>    
+		    <classifier>jdk15</classifier>    
+		</dependency>
+		 -->
+		
 	</dependencies>
 
 	<build>
+	<finalName>NoOne</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
