--- a/NoOne/springBootBase/pom.xml
+++ b/NoOne/springBootBase/pom.xml
@@ -70,6 +70,11 @@
 		    <artifactId>xstream</artifactId>
 		    <version>1.4.9</version>
 		</dependency>
+		<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-log4j</artifactId>
+        <version>1.3.8.RELEASE</version>
+    </dependency>
 		<!--
 		<dependency>    
 		    <groupId>net.sf.json-lib</groupId>    
